# course_work_6

./: .env.sample  mailing_data.json  pyproject.toml
app_customers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app_customers/migrations/: 0001_initial.py
app_customers/templates/app_customers/: base.html  customers_detail.html  customers_form.html  customers_list.html
app_mailings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app_mailings/migrations/: 0001_initial.py
app_mailings/templates/app_mailings/: message_confirm_delete.html  message_detail.html  message_form.html
app_users/: admin.py  forms.py  urls.py  views.py
app_users/management/commands/: csu.py
app_users/migrations/: 0001_initial.py
app_users/templates/app_users/: login.html  user_form.html
blogentry/: apps.py  models.py  urls.py  views.py
blogentry/migrations/: 0001_initial.py
blogentry/templates/blogentry/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/commands/: fill.py  runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: base.html  customers_confirm_delete.html  customers_detail.html  customers_form.html  customers_list.html  home.html  massage_form.html  massage_list.html  (+2 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_username.py  0003_remove_user_username.py
users/templates/: login.html
(+6 files in other folders)
