[tool.poetry]
name = "course-work-6"
version = "0.1.0"
description = ""
authors = ["Skillova <skillova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django = "4.2.2"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
