[tool.poetry]
name = "course-work-6"
version = "0.1.0"
description = ""
authors = ["Skillova <skillova@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
django = "4.2.2"
apscheduler = "^3.10.4"
python-dotenv = "^1.0.1"
pytils = "^0.4.1"
django-apscheduler = "^0.6.2"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
